Describe your changes

--- a/Ayush Tripathi/26848/catlog.html
+++ b/Ayush Tripathi/26848/catlog.html
@@ -93,11 +93,9 @@
                 <p>Description of Product 2.</p>
                 <p>$149.99</p>
                 <div class="add-to-cart">
-                    <button>Add to Cart</button>
+                    <button></button>
                 </div>
-            </div>
-            <!-- Add more products as needed -->
-        </div>
+           
     </div>
 </body>
 </html>
